--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myapp",
   "version": "0.1.0",
-  "homepage": "https:://bulatovvna.github.io/toDoApp",
+  "homepage": "https://bulatovvna.github.io/toDoApp",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
